# ieee_fraud

./: README.md
exploratory_analysis/: first_analysis.ipynb
poetry_files/: pyproject.toml
preprocessing_data/: merge_files.py
