[project]
name = "ieee"
version = "0.1.0"
description = ""
authors = [
    {name = "David Clancy",email = "djclancyjr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "sktime (>=0.40.1,<0.41.0)",
    "prophet (>=1.3.0,<2.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "m5_forecast", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
